fixed spacing for the landing page cards

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,7 +53,7 @@
 }
 
 .landing_info-banner {
-    height: 40vh;
+    height: 70vh;
     background-size: cover;
     background-position: left 50% bottom 50%;
 }
@@ -93,6 +93,8 @@
   text-align: center;
   padding: 14px;
   position: relative;
+  display: flex;
+  justify-content: space-around;
   .landing_why-prep-body {
     text-align: center;
     justify-content: center;
@@ -126,16 +128,16 @@
 }
 
 .landing_friends-prep-card {
-  width: 41%;
-  margin-top: 50px;
-  border-radius: 5px;
-  background-color: #F1574B;
-  height: 40%;
-  text-align: center;
-  padding: 14px;
-  display: flex;
-  position: relative;
-  justify-content: flex-end;
+    width: 42%;
+    margin-top: 50px;
+    border-radius: 5px;
+    background-color: #F1574B;
+    padding: 14px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    display: flex;
+    justify-content: space-around;
   .landing_friends-prep-body {
     text-align: center;
     justify-content: center;
